--- a/Objects/My Proj.build_log.htm
+++ b/Objects/My Proj.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  03/22/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\David\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
+compiling LED.c...
+linking...
+Program Size: Code=15776 RO-data=1444 RW-data=124 ZI-data=2008  
 ".\Objects\My Proj.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
